style: amend image properies to prevent overflowing

--- a/style.css
+++ b/style.css
@@ -38,3 +38,8 @@ main {
     gap: 0;
   }
 }
+
+img {
+  object-fit: cover;
+  max-width: 100%;
+}
